# bg-cleaner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  launch.bat  main.py  pyproject.toml
src/bgcleaner/: config.py  errors.py  schemas.py
src/bgcleaner/core/: image_processing.py
src/bgcleaner/core/providers/: __init__.py  _base.py  modnet.py  rmbg.py
src/bgcleaner/ui/: app.py  state.py  widgets.py
tests/: conftest.py  test_config_errors.py  test_image_processing.py  test_matting.py  test_schemas.py
